--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,4 +16,6 @@ itertools = "*"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 bytes = "1.0.1"
+regex = "1.4.5"
+thiserror = "1.0"
 
