--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "store-links"
+name = "links-server"
 version = "0.1.0"
 edition = "2018"
 
@@ -18,4 +18,5 @@ serde = { version = "1.0", features = ["derive"] }
 bytes = "1.0.1"
 regex = "1.4.5"
 thiserror = "1.0"
+async-lock = "2.4.0"
 
