--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,21 +10,22 @@ license = "AGPL-3.0-or-later"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-hyper={ version="*", features = ["full"] }
-futures = "0.3"
-tokio = { version="*", features = ["full"] }
-pretty_env_logger = "*"
-config = "*"
-lazy_static = "*"
-itertools = "*"
-serde_json = "1.0"
-serde = { version = "1.0", features = ["derive"] }
-bytes = "1.0.1"
-regex = "1.4.5"
-thiserror = "1.0"
-async-lock = "2.4.0"
+hyper={ version="0", features = ["full"] }
+futures = "0"
+tokio = { version="1", features = ["full"] }
+pretty_env_logger = "0"
+config = "0"
+lazy_static = "1"
+itertools = "0"
+serde_json = "1"
+serde = { version = "1", features = ["derive"] }
+bytes = "1"
+regex = "1"
+thiserror = "1"
+async-lock = "2"
 lib-hyper-organizator = { version = "0.3.1", features = ["security"] }
-mimalloc = "0.1"
-tracing-subscriber = "0.3"
-tracing = "0.1.37"
+mimalloc = "0"
+tracing-subscriber = "0"
+tracing = "0"
+tracing-test = "0"
 
