--- a/settings.toml
+++ b/settings.toml
@@ -1,6 +1,27 @@
 api_ip = "0.0.0.0:3000"
 
+[security]
+ignore = [ 
+  "/", 
+  "/pkg_test/concatenate.js",
+  "/pkg_test/concatenate_bg.wasm",
+  "/links-manifest.json",
+  "/images/links.ico",
+  "/images/links-4x.png",
+  "/links"
+]
+
 [application]
 storage_dir = "data"
+static_files_dir = "html"
 click_buffer_size = 1048576
+
+[application_static_files]
+"/"                             = { file = "index.html", mime = "text/html" }
+"/pkg_test/concatenate.js"      = { file = "concatenate.js", mime = "text/javascript" }
+"/pkg_test/concatenate_bg.wasm" = { file = "concatenate_bg.wasm", mime = "application/wasm" }
+"/links-manifest.json"          = { file = "links-manifest.json", mime = "application/json" }
+"/images/links.ico"             = { file = "links.ico", mime = "image/x-icon" }
+"/images/links-4x.png"          = { file = "links-4x.png", mime = "image/png" }
+ 
 
