--- a/links-server/k8s/links-helm/templates/links-ingress.yml
+++ b/links-server/k8s/links-helm/templates/links-ingress.yml
@@ -6,16 +6,17 @@ metadata:
     # use nginx
     kubernetes.io/ingress.class: "nginx"
     # rewrite the target based on the regex capture group
-    nginx.ingress.kubernetes.io/rewrite-target: /$1
+    #nginx.ingress.kubernetes.io/rewrite-target: /$1
     # Merge the slashes before rewriting
     nginx.ingress.kubernetes.io/merge-slashes: "true"
 spec:
   rules:
-    - host: k8s.organizator.ro
+    - host: links.simulacron.eu
       http:
         paths:
           #- path: /links(/|$)(.*)
-          - path: /links/(.*)
+          #- path: /links/(.*)
+          - path: /
             pathType: Prefix
             backend:
               service:
