--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -34,6 +34,6 @@ jobs:
       - name: Build the Docker image
         run: |
           VERSION=0.1.4
-          docker build . --file Dockerfile --tag links-server:$VERSION --build-arg version=$VERSION
-          docker push links-server:$VERSION
+          docker build . --file Dockerfile --tag ghcr.io/ovidiu-ionescu/links-server:latest --build-arg version=$VERSION
+          docker push ghcr.io/ovidiu-ionescu/links-server:latest
 
