--- a/links-server/Cargo.toml
+++ b/links-server/Cargo.toml
@@ -29,4 +29,5 @@ tracing-subscriber = "0"
 tracing = "0"
 tracing-test = "0"
 git2 =  { version = "0.18", features = ["vendored-libgit2"] }
+indoc = "2"
 
